force-app/main/default/objects/Account/fields/Account_Closed_Accident_Management__c.field-meta.xml
<CustomField>
    <fullName>Account_Closed_Accident_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Closed (Accident Management)</label>
    <type>Checkbox</type>
</CustomField>