force-app/main/default/objects/Account/fields/Account_Closed_Police__c.field-meta.xml
<CustomField>
    <fullName>Account_Closed_Police__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Closed (Police)</label>
    <type>Checkbox</type>
</CustomField>