force-app/main/default/objects/Account/fields/Account_Closed_Roadside__c.field-meta.xml
<CustomField>
    <fullName>Account_Closed_Roadside__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Closed (Roadside)</label>
    <type>Checkbox</type>
</CustomField>