force-app/main/default/objects/Account/fields/Account_Closed_VIXA__c.field-meta.xml
<CustomField>
    <fullName>Account_Closed_VIXA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Closed (Vixa)</label>
    <type>Checkbox</type>
</CustomField>