force-app/main/default/objects/Account/fields/Account_Status_Accident_Management__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Accident_Management__c</fullName>
    <formula>IF(  Account_Closed_Accident_Management__c  == TRUE, &quot;Closed&quot;,
IF(
Active_Contracts_Accident_Management__c &gt;= 1,
&quot;Customer&quot;,
IF(
 Contracts_in_Revie_Accident_Management__c &gt;= 1,
&quot;In Contract Review&quot;,
IF(
AND(
Active_Contracts_Accident_Management__c = 0,
Expired_Contracts_Accident_Management__c &gt;= 1
),
&quot;Lapsed&quot;,
&quot;Prospect&quot;
)
)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status (Accident Management)</label>
    <type>Text</type>
</CustomField>