force-app/main/default/objects/Account/fields/Account_Status_Police_Force__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Police_Force__c</fullName>
    <formula>IF(  Account_Closed_Police__c  == TRUE, &quot;Closed&quot;,
IF(
Active_Contracts_Police_Force__c &gt;= 1,
&quot;Customer&quot;,
IF(
 Contracts_in_Review_Police_Force__c  &gt;= 1,
&quot;In Contract Review&quot;,
IF(
AND(
Active_Contracts_Police_Force__c = 0,
Expired_Contracts_Police_Force__c&gt;= 1
),
&quot;Lapsed&quot;,
&quot;Prospect&quot;
)
)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status (Police Force)</label>
    <type>Text</type>
</CustomField>