force-app/main/default/objects/Account/fields/Account_Status_SMR__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_SMR__c</fullName>
    <formula>IF(  Account_Closed_SMR__c  == TRUE, &quot;Closed&quot;,
IF(
Active_Contracts_SMR__c  &gt;= 1,
&quot;Customer&quot;,
IF(
 Contracts_in_Review_SMR__c  &gt;= 1,
&quot;In Contract Review&quot;,
IF(
AND(
 Active_Contracts_SMR__c  = 0,
Expired_Contracts_SMR__c &gt;= 1
),
&quot;Lapsed&quot;,
&quot;Prospect&quot;
)
)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status (SMR)</label>
    <type>Text</type>
</CustomField>