force-app/main/default/objects/Account/fields/DQM_ID__c.field-meta.xml
<CustomField>
    <fullName>DQM_ID__c</fullName>
    <label>DQM ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>