force-app/main/default/objects/Account/fields/Number_of_Decision_Maker_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Decision_Maker_Contacts__c</fullName>
    <label>Number of Decision Maker Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>